# jmes-tts

./: .cruft.json  NOTICE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
docs/: mkdocs.yml
docs/docs/: index.md
src/jaudible/: cli.py  tts.py  voices.py
src/jmestts/: cli.py
tests/: test_cli.py  test_cli_invalid_language.py  test_cli_list_languages.py  test_tts.py
